--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@modelcontextprotocol/sdk": "^1.12.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.80.6",
     "class-variance-authority": "^0.7.1",
@@ -50,7 +52,6 @@
     "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=20.11.0",
-    "npm": ">=8.0.0"
+    "node": ">=20.11.0"
   }
 }
